
 421.	[bug]		nslookup would exit when given a blank line as input.

 420.	[bug]		nslookup failed to implement the "exit" command.

 419.	[bug]		The certificate type PKIX was misspelled as SKIX.

 418.	[bug]		At debug levels >= 10, getting an unexpected
			socket receive error would crash the server
			while trying to log the error message.

 416.	[bug]		Slave zones with no master file tried to use a
			NULL pointer for a journal file name when they
			received an IXFR. [RT #273]

 415.	[bug]		The logging code leaked file descriptors.

 413.	[bug]		Notify could attempt to use the zone database after
			it had been unloaded. [RT#267]

	--- 9.0.0rc5 released ---

 411.	[bug]		A typo in the HS A code caused an assertion failure.

 410.	[bug]		lwres_gethostbyname() and company set lwres_h_errno
			to a random value on success.

 409.	[bug]		If named was shut down early in the startup
			process, ns_omapi_shutdown() would attempt to lock
			an unintialized mutex. [RT #262]

 408.	[bug]		stub zones could leak memory and reference counts if
			all the masters were unreachable.

 407.	[bug]		isc_rwlock_lock() would needlessly block
			readers when it reached the read quota even
			if no writers were waiting.

 406.	[bug]		Log messages were occasionally lost or corrupted
			due to a race condition in isc_log_doit().

 404.	[bug]		The request library didn't completely work with IPv6.

 381.	[bug]		Check for IPV6_RECVPKTINFO and use it instead of
			IPV6_PKTINFO if found. [RT #229]

	--- 9.0.0rc4 released ---

 403.	[bug]		"host" did not use the search list.

 402.	[bug]		Treat undefined acls as errors, rather than
			warning and then later throwing an assertion.
			[RT #252]

 400.	[bug]		SIG(0) signing and verifying was done incorrectly.
			[RT #249]

 399.	[bug]		When reloading the server with a config file
			containing a syntax error, it could catch an
			assertion failure trying to perform zone
			maintenance on, or sending notifies from,