@@ -1,4 +1,8 @@
 
+ 424.	[bug]		notify_createmessage() could trigger an assertion failure
+			when creating the notify message failed, e.g. due to
+			corrupt zones with multiple SOA records. [RT #279]
+
  421.	[bug]		nslookup would exit when given a blank line as input.
 
  420.	[bug]		nslookup failed to implement the "exit" command.
